--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 <body><div class="container"
    <h1><b> ! This website is NOT run by a legitimate group or organization ! </b></h1></body>
+   <h2><b> ! All credits are to go to the websites mentioned above as none of the due diligence or research was done by me !</b></h2>
 </body>
 
 
